--- a/roles/EC2_instance/tasks/main.yml
+++ b/roles/EC2_instance/tasks/main.yml
@@ -1,11 +1,5 @@
 ---
 # tasks file for EC2_instance
- - ec2:
-    key_name: mykey
-    instance_type: t2.micro
-    image: ami-123456
-    wait: yes
-    group: webserver
-    count: 3
-    vpc_subnet_id: subnet-29e63245
-    assign_public_ip: yes
+- include: create_key.yml
+- include: create_ec2_instance.yml
+
