--- a/site.yml
+++ b/site.yml
@@ -1,9 +1,9 @@
 ---
  - name: Create ec2 instaces
    hosts: localhost
-   become: yes
-   become_method: sudo
+   #   become: yes
+   #   become_method: sudo
    gather_facts: true
    roles:
-    - EC2_instance
+   - EC2_instance
 
