--- a/roles/EC2_instance/tasks/create_key.yml
+++ b/roles/EC2_instance/tasks/create_key.yml
@@ -3,12 +3,12 @@
 - name: Create an EC2 key for instances
   ec2_key:
     name: '{{ key_name }}'
-    region: '{{ key_region }}'
-  register: occurance
+    region: '{{ instance_region }}'
+  register: new_key
 
 - name: Save the created EC2 key
   copy:
-    content: '{{ occurance.key.private_key }}'
+    content: '{{ new_key.key.private_key }}'
     dest: './{{ key_name }}.pem'
     mode: 0600
-  when: occurance.changed
+  when: new_key.changed
