--- a/roles/EC2_instance/tasks/create_ec2_instance.yml
+++ b/roles/EC2_instance/tasks/create_ec2_instance.yml
@@ -6,7 +6,7 @@
    image: '{{ ami_id }}'
    region: '{{ instance_region }}'
    wait: '{{ wait_condition }}'
-   group: '{{ instance_group }}'
+   group: '{{ instance_security_group }}'
    count: '{{ instance_count }}'
    vpc_subnet_id: '{{ subnet_id }}'
    assign_public_ip: '{{ public_ip_condition }}'
