--- a/roles/EC2_instance/tasks/main.yml
+++ b/roles/EC2_instance/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 # tasks file for EC2_instance
 - include: create_key.yml
+- include: create_security_group.yml
 - include: create_ec2_instance.yml
 
