--- a/roles/EC2_instance/vars/main.yml
+++ b/roles/EC2_instance/vars/main.yml
@@ -1,14 +1,26 @@
 ---
 #Varibale declaration for instance creation
-key_name: mykey
+key_name: CHES_key
 instance_type: t2.micro
 ami_id: ami-0cf6f5c8a62fa5da6
 instance_region: us-west-2
 wait_condition: yes
-instance_group: Ansible-node #SecurityGroup name
 instance_count: 1
 subnet_id: subnet-ebd2728e
 public_ip_condition: yes
 
-#Variable declaration for key creation
-key_region: us-west-2
+
+#Variable declaration for SecurityGroup creation
+instance_security_group: CHES_SG #SecurityGroup name
+vpc_id: vpc-f39b4f96
+aws_profile: default
+
+#SecurityGroup protocol
+sg_proto_t: tcp
+sg_proto_u: udp
+sg_proto_a: all
+
+#SecurityGroup ports
+SSH_port: 22
+Http_port: 80
+Https_port: 443
