--- a/site.yml
+++ b/site.yml
@@ -1,9 +1,7 @@
 ---
- - name: Create ec2 instaces
+ - name: Create CHES Environment
    hosts: localhost
-   #become: yes
-   #become_method: sudo
    gather_facts: true
    roles:
    - EC2_instance
-
+   - S3_service
