--- a/roles/S3_service/tasks/create_S3_bucket.yml
+++ b/roles/S3_service/tasks/create_S3_bucket.yml
@@ -1,6 +1,6 @@
 ---
-#Create s3 buckets for CHES
-- s3_bucket:
+- name: Create s3 buckets for CHES
+  s3_bucket:
     name: '{{ CHES_s3_bucket_name }}'
     state: '{{ s3_state }}'
     region: '{{ s3_region }}'
