--- a/roles/CloudFront_service/vars/main.yml
+++ b/roles/CloudFront_service/vars/main.yml
@@ -1,7 +1,2 @@
 ---
-# vars file for CloudFront_service
-cf_state: present
-cf_domain: www.ches-test.com
-cf_tag_name: CHES CF distribution
-cf_tag_project: CHES CF test
-cf_priority: 1
+# vars file for CloudFront_service defined in group_vars global variable
