--- a/site.yml
+++ b/site.yml
@@ -3,7 +3,7 @@
    hosts: local
    gather_facts: true
    roles:
-   #- VPC_service        
+   - VPC_service        
    #- EC2_instance
    #- S3_service
-   - CloudFront_service
+   #- CloudFront_service
