--- a/roles/S3_service/tasks/create_S3_folders.yml
+++ b/roles/S3_service/tasks/create_S3_folders.yml
@@ -2,6 +2,6 @@
 - name: Create folder for s3 bucket
   aws_s3:
     bucket: '{{ CHES_s3_bucket_name }}'
-    object: "{{ s3_folder }}"
+    object: '{{ s3_folder }}'
     mode: '{{ s3_mode }}'
     region: '{{ s3_region }}'
