--- a/group_vars/local.yml
+++ b/group_vars/local.yml
@@ -67,3 +67,19 @@ cf_domain: www.ches-test.com
 cf_tag_name: CHES CF distribution
 cf_tag_project: CHES CF test
 cf_priority: 1
+
+#------------------------------------------------#
+# Variable declaration for Lambda_service role
+#------------------------------------------------#
+lambda_name: CHES_Lambda
+lambda_state: present
+lambda_publish: True
+lambda_description: Lambda function for CHES project
+lambda_project_folder: "Lambda_service"   #/path/to/deployment/package
+lambda_deployment_package: lambda_func.zip
+lambda_runtime: python2.7
+lambda_timeout: 5
+lambda_handler: lambda.handler
+lambda_memory_size: 128
+lambda_account: 123456789012 #AWS_Account ID
+lambda_production_version: 1 #Lambda function version
