--- a/roles/SNS_service/tasks/create_SNS_service.yml
+++ b/roles/SNS_service/tasks/create_SNS_service.yml
@@ -1,5 +1,5 @@
 ---
-- name: Create alarm SNS topic
+- name: Create CHES SNS topic
   sns_topic:
     name: '{{ sns_name }}'
     state: '{{ sns_state }}'
